# nuntium_em

./: .cursorignore  .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  start_docker.sh  stop_docker.sh
.github/workflows/: backend-tests.yml  base-python-tests.yml  docker-publish.yml  frontend-tests.yml
backend/: .dockerignore  DockerFile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/auth/: auth_db.py  auth_routes.py  email_utils.py  schemas.py  users.py
backend/app/cache/: cache.py
backend/app/core/: data_chat.py  data_qa.py  metric.py  pipeline.py  report_chat.py  reports.py
backend/app/data_config/: country_codes.json  country_commodity_dependence.json  currency_pairs.json  main_tickers.csv  stock_indices_symbols.json  world_bank_indicators.json
backend/app/db/: data.py
backend/app/models/: __init__.py
backend/app/tests/: conftest.py  test_routes.py  utils.py
em_data_chat/: Dockerfile  README.md  data_chat_server.py  langgraph.json  pyproject.toml  run_data_chat.py
em_data_chat/em_data_chat/: agent.py
em_data_chat/em_data_chat/utils/: article_summarizer.py  article_summarizer_new.py  nodes.py  nodes_pro.py  prompts.py  state.py  tools.py
em_news_analysis/: .dockerignore  Dockerfile  README.md  entrypoint.sh  news_pipeline_server.py  pyproject.toml  run_pipeline.py
em_news_analysis/em_news_analysis/: __init__.py  article_summarizer.py  cluster_summarizer.py  clustering.py  config.py  data_fetcher.py  embeddings.py  matching.py  models.py  pipeline.py  preprocessor.py  sampling.py  utils.py
em_news_analysis/tests/: test_embeddings.py  test_preprocessor.py
em_research_agentic/: Dockerfile  README.md  graph_server.py  langgraph.json  pyproject.toml  report_server.py  run_research.py
em_research_agentic/em_research_agentic/: agent.py
em_research_agentic/em_research_agentic/utils/: article_summarizer.py  nodes.py  nodes_open.py  prompts.py  state.py  tools.py
em_research_agentic/exploratory/: tavily_output.py
em_research_chat/: Dockerfile  README.md  chat_server.py  langgraph.json  pyproject.toml  run_research_chat.py
em_research_chat/em_research_chat/: agent.py
em_research_chat/em_research_chat/utils/: article_summarizer.py  nodes.py  nodes_pro.py  prompts.py  state.py  tools.py
frontend/: DockerFile  README.md  craco.config.js  jest.config.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  setupTests.ts
frontend/src/__tests__/: App.test.tsx  ChatInterface.test.tsx  CountryPage.test.tsx  Dashboard.test.tsx  Header.test.tsx  LoginPage.test.tsx  ReportChatInterface.test.tsx  ReportDialog.test.tsx  api.test.ts
frontend/src/components/: ArticleDialog.tsx  ChatInterface.tsx  CountryPageAlertDialog.tsx  CountryPageHeader.tsx  EconomicIndicatorsChart.tsx  EventList.tsx  Header.tsx  LowRelevanceEvents.tsx  MarkdownContent.tsx  OpenResearchReportDialog.tsx  PrivateRoute.tsx  ReportChatInterface.tsx  ReportDialog.tsx
frontend/src/components/chart-components/: ChartOptions.tsx  MetricChart.tsx  MetricSelector.tsx  MultipleCharts.tsx  QuestionSection.tsx  SingleChart.tsx
frontend/src/components/ui/: accordion.tsx  alert.tsx  card.tsx  date-range-picker.tsx  multi-select.tsx  tooltip.tsx
frontend/src/components/ui/chat/: chat-bubble.tsx  chat-input.tsx
frontend/src/contexts/: AuthContext.tsx  TourContext.tsx
frontend/src/hooks/: useAutoScroll.ts  useChartData.ts  useChat.ts  useCountryData.ts  useMetricsData.ts  useReportGeneration.ts  useTourSteps.ts
frontend/src/pages/: CountryPage.tsx  Dashboard.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  UserProfilePage.tsx  VerifyEmailPage.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/utils/: colorUtils.ts  dataFormatter.ts
nginx/: nginx.conf
scripts/: push_to_ghcr.sh
tests/: test_news_analysis_config.py  test_news_analysis_preprocessor.py
