[tool.poetry]
name = "em_news_analysis"
version = "0.1.0"
description = "A package for analyzing news events using GDELT data and natural language processing"
authors = ["Raffay Rana <ranaraffay@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
openai = "^1.40.0"
google-cloud-bigquery = {extras = ["storage"], version ="^3.25.0"}
python-dotenv = "^1.0.1"
langchain_core = "^0.3.0"
langchain_openai = "^0.2.0"
langchain_community = "^0.3.0"
db-dtypes = "^1.2.0"
google-cloud-bigquery-storage = "^2.25.0"
tqdm = "^4.66.5"
beautifulsoup4 = "^4.12.3"
pycountry = "^24.6.1"
fastapi = {extras = ["standard"], version = "0.115.0"}
pymongo = "^4.8.0"
umap-learn = "^0.5.6"
pypdf = "^5.0.0"
playwright = "^1.47.0"
unstructured = "^0.15.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"